--- a/src/template.html
+++ b/src/template.html
@@ -8,14 +8,13 @@
     <title>Restaurant</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <button type="button">Home</button>
-            <button type="button">Menu</button>
-            <button type="button">About</button>
+    <header class="header">
+        <nav class="nav">
+            <button id="home" type="button">Home</button>
+            <button id="menu" type="button">Menu</button>
+            <button id="about" type="button">About</button>
         </nav>
     </header>
     <div id="content"></div>
-    <footer></footer>
 </body>
 </html>
